headers/r3d_draw.h

/**
 * @brief Ends the current rendering session.
 *
 * This function is the one that actually performs the full
 * rendering of the described scene. It carries out culling,
 * sorting, shadow rendering, scene rendering, and screen /
 * post-processing effects.
 */
R3DAPI void R3D_End(void);
/**
 * @brief Queues an instanced animated model draw command with an instance range and an additional transform.
 *
 * Draws 'count' animated instances starting at 'offset' in the instance buffer.
 * Both 'offset' and 'count' are clamped to stay within [0, instances.capacity]:
 *   - offset is clamped to [0, capacity]
 *   - count is clamped to [0, capacity - offset]
 * Does nothing if the resulting count is <= 0.
 * The transform is applied to all instances.
 *
 * The command is executed during R3D_End().
 */
R3DAPI void R3D_DrawAnimatedModelInstancedPro(R3D_Model model, R3D_AnimationPlayer player, R3D_InstanceBuffer instances, int offset, int count, Matrix transform);
/**
 * @brief Queues a decal draw command with position and uniform scale.
 * 
 * The command is executed during R3D_End().
 */
R3DAPI void R3D_DrawDecal(R3D_Decal decal, Vector3 position, float scale);
/**
 * @brief Queues a decal draw command with position, rotation and non-uniform scale.
 *
 * The command is executed during R3D_End().
 */
R3DAPI void R3D_DrawDecalEx(R3D_Decal decal, Vector3 position, Quaternion rotation, Vector3 scale);
/**
 * @brief Queues a decal draw command using a full transform matrix.
 *
 * The command is executed during R3D_End().
 */
R3DAPI void R3D_DrawDecalPro(R3D_Decal decal, Matrix transform);
/**
 * @brief Queues an instanced decal draw command.
 *
 * Draws multiple instances using the provided instance buffer.
 * Does nothing if the number of instances is <= 0.
 *
 * The command is executed during R3D_End().
 */
R3DAPI void R3D_DrawDecalInstanced(R3D_Decal decal, R3D_InstanceBuffer instances, int count);
/**
 * @brief Queues an instanced decal draw command with an instance range.
 *
 * Draws 'count' instances starting at 'offset' in the instance buffer.
 * Both 'offset' and 'count' are clamped to stay within [0, instances.capacity]:
 *   - offset is clamped to [0, capacity]
 *   - count is clamped to [0, capacity - offset]
 * Does nothing if the resulting count is <= 0.
 *
 * The command is executed during R3D_End().
 */
R3DAPI void R3D_DrawDecalInstancedEx(R3D_Decal decal, R3D_InstanceBuffer instances, int offset, int count);
/**
 * @brief Queues an instanced decal draw command with an instance range and an additional transform.
 *
 * Draws 'count' instances starting at 'offset' in the instance buffer.
 * Both 'offset' and 'count' are clamped to stay within [0, instances.capacity]:
 *   - offset is clamped to [0, capacity]
 *   - count is clamped to [0, capacity - offset]
 * Does nothing if the resulting count is <= 0.
 * The transform is applied to all instances.
 *
 * The command is executed during R3D_End().
 */
R3DAPI void R3D_DrawDecalInstancedPro(R3D_Decal decal, R3D_InstanceBuffer instances, int offset, int count, Matrix transform);