source/r3d_draw.inc


{*
 * @brief Queues an instanced animated model draw command with an instance range and an additional transform.
 *
 * Draws 'count' animated instances starting at 'offset' in the instance buffer.
 * Both 'offset' and 'count' are clamped to stay within [0, instances.capacity]:
 *   - offset is clamped to [0, capacity]
 *   - count is clamped to [0, capacity - offset]
 * Does nothing if the resulting count is <= 0.
 * The transform is applied to all instances.
 *
 * The command is executed during R3D_End().
 *}
procedure R3D_DrawAnimatedModelInstancedPro(model: TR3D_Model; player: TR3D_AnimationPlayer;
  instances: TR3D_InstanceBuffer; offset, count: Integer; transform: TMatrix); cdecl;
  external {$IFNDEF RAY_STATIC}r3dName{$ENDIF} name 'R3D_DrawAnimatedModelInstancedPro';

{*
 * @brief Queues a decal draw command with position and uniform scale.
 *
 * The command is executed during R3D_End().
 *}
procedure R3D_DrawDecal(decal: TR3D_Decal; position: TVector3; scale: Single); cdecl;
  external {$IFNDEF RAY_STATIC}r3dName{$ENDIF} name 'R3D_DrawDecal';

{*
 * @brief Queues a decal draw command with position, rotation and non-uniform scale.
 *
 * The command is executed during R3D_End().
 *}
procedure R3D_DrawDecalEx(decal: TR3D_Decal; position: TVector3;
  rotation: TQuaternion; scale: TVector3); cdecl;
  external {$IFNDEF RAY_STATIC}r3dName{$ENDIF} name 'R3D_DrawDecalEx';

{*
 * @brief Queues a decal draw command using a full transform matrix.
 *
 * The command is executed during R3D_End().
 *}
procedure R3D_DrawDecalPro(decal: TR3D_Decal; transform: TMatrix); cdecl;
  external {$IFNDEF RAY_STATIC}r3dName{$ENDIF} name 'R3D_DrawDecalPro';

{*
 * @brief Queues an instanced decal draw command.
 *
 * Draws multiple instances using the provided instance buffer.
 * Does nothing if the number of instances is <= 0.
 *
 * The command is executed during R3D_End().
 *}
procedure R3D_DrawDecalInstanced(decal: TR3D_Decal;
  instances: TR3D_InstanceBuffer; count: Integer); cdecl;
  external {$IFNDEF RAY_STATIC}r3dName{$ENDIF} name 'R3D_DrawDecalInstanced';

{*
 * @brief Queues an instanced decal draw command with an instance range.
 *
 * Draws 'count' instances starting at 'offset' in the instance buffer.
 * Both 'offset' and 'count' are clamped to stay within [0, instances.capacity]:
 *   - offset is clamped to [0, capacity]
 *   - count is clamped to [0, capacity - offset]
 * Does nothing if the resulting count is <= 0.
 *
 * The command is executed during R3D_End().
 *}
procedure R3D_DrawDecalInstancedEx(decal: TR3D_Decal;
  instances: TR3D_InstanceBuffer; offset, count: Integer); cdecl;
  external {$IFNDEF RAY_STATIC}r3dName{$ENDIF} name 'R3D_DrawDecalInstancedEx';

{*
 * @brief Queues an instanced decal draw command with an instance range and an additional transform.
 *
 * Draws 'count' instances starting at 'offset' in the instance buffer.
 * Both 'offset' and 'count' are clamped to stay within [0, instances.capacity]:
 *   - offset is clamped to [0, capacity]
 *   - count is clamped to [0, capacity - offset]
 * Does nothing if the resulting count is <= 0.
 * The transform is applied to all instances.
 *
 * The command is executed during R3D_End().
 *}
procedure R3D_DrawDecalInstancedPro(decal: TR3D_Decal;
  instances: TR3D_InstanceBuffer; offset, count: Integer; transform: TMatrix); cdecl;
  external {$IFNDEF RAY_STATIC}r3dName{$ENDIF} name 'R3D_DrawDecalInstancedPro';
